# rust-example-workspace

./: .pre-commit-config.yaml  Cargo.toml  README.md
axum-example/: Cargo.toml
axum-example/resource/: db_init.sql  env.toml
axum-example/src/: connector.rs  ctx.rs  error.rs  log.rs  main.rs  model.rs
axum-example/src/entity/: mod.rs  prelude.rs  tickets.rs  users.rs
axum-example/src/web/: common.rs  mod.rs  mw_auth.rs  routes_login.rs  routes_tickets.rs  ticket.rs  user.rs
axum-example/src/web/ticket/: model.rs  routes_tickets.rs  service_ticket.rs
axum-example/src/web/user/: model.rs  routes_users.rs  service_user.rs
clickhouse-exmaple/: Cargo.toml
grpc-example/: Cargo.toml  build.rs
grpc-example/proto/: helloworld.proto  streaming.proto
grpc-example/src/helloworld/: client.rs  server.rs
grpc-example/src/streaming/: client.rs  server.rs
rabbitmq-example/: Cargo.toml
rabbitmq-example/examples/: amiquip_demo.rs  lapin_demo.rs
rabbitmq-example/src/: main.rs
rayon-exmaple/: Cargo.toml
redis-example/: Cargo.toml
redis-example/src/ttl/: redis-ttl.rs
rust-example/: Cargo.toml
rust-example/examples/: api_agg.rs  bloom-filter.rs  borrow_test.rs  check_ip_or_host.rs  display_impl.rs  get_pointer.rs  md5_test.rs  multi-level-borrowing.rs  parse_root_domain.rs  pointer_copy.rs  read_file.rs  remainder.rs  replace_new_line.rs  snow_flake.rs  split_demo.rs  string_append.rs  string_similarity_algorithm.rs  uri_matcher.rs  utc-time.rs  uuid_test.rs  vec_distinct.rs
rust-example/src/: main.rs
sea-orm-example/: Cargo.toml
sea-orm-example/src/: main.rs
sea-orm-example/src/entities/: mod.rs  prelude.rs  users.rs
sea-orm-example/src/sql_inject/: mod.rs
tokio-example/: Cargo.toml
tokio-example/examples/: interval_time.rs  rate_monitoring.rs  thread.rs
