[package]
name = "rust-example-workspace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [ "axum-example", "clickhouse-exmaple", "rayon-exmaple", "redis-example","rust-example", "sea-orm-example", "tokio-example"]

[workspace.dependencies]
