# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
resolver = "2"

members = [
    "axum-example",
    "clickhouse-exmaple",
    "grpc-example",
    "rabbitmq-example",
    "rayon-exmaple",
    "redis-example",
    "rust-example",
    "sea-orm-example",
    "tokio-example",
]

[workspace.dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0" }
tokio = { version = "1", features = ["full"] }
# 用于读取.env文件中的参数
dotenvy = "0"
# 用于解析请求为json
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
# 用于处理错误
anyhow = { version = "1" }
thiserror = { version = "1" }
sea-orm = { version = "0.12", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
clickhouse = { version = "0.11" }
rayon = { version = "1.10.0" }
chrono = { version = "0.4" }
snowflake-rs = "0.1"
bloomfilter = "1.0.13"

uri-pattern-matcher = { version = "0.1.4" } # 用于模式匹配uri
regex = { version = "1.10.4" }              # 正则匹配

# rabbitmq queue连接
lapin = "2.3"
amiquip = { version = "0.4" }

tokio-stream = "0.1"

# 字符串相似度计算
levenshtein = "1.0.5" # 计算两字符串编辑距离
hamming = "0.1.3"     # 计算两字符串汉明距离
simhash = "0.2.0"     # 计算字符串相似
trie-rs = "0.3.0"     # 前缀树

nom = { version = "7.1.3" }

# 缓存
moka = { version = "0.12.7" }
md-5 = { version = "0.10.6" }

# 用于解析域名
publicsuffix = { version = "2.2.3" }
url = { version = "2.5.0" }
