[package]
name = "grpc-example"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "helloworld-server"
path = "src/helloworld/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/helloworld/client.rs"


[[bin]]
name = "streaming-server"
path = "src/streaming/server.rs"

[[bin]]
name = "streaming-client"
path = "src/streaming/client.rs"



[dependencies]
tonic = { version = "0.11.0" }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.203" }
prost = { version = "0.12.6" }
async-stream = { version = "0.3.5" }

[build-dependencies]
tonic-build = { version = "0.11.0" }
anyhow = "1.0.86"