[package]
name = "rust-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snowflake-rs = { workspace = true }

bloomfilter = { workspace = true }

uri-pattern-matcher = { workspace = true }

chrono = { workspace = true }

regex = { workspace = true }

# 字符串相似度计算
levenshtein = { workspace = true }
hamming = { workspace = true }
simhash = { workspace = true }
trie-rs = { workspace = true }

# 缓存
# moka = { workspace = true }

md-5 = { workspace = true }

publicsuffix = { workspace = true }
url = { workspace = true }

# 错误处理
anyhow = { workspace = true }

sysinfo = "0.30.12"
uuid = { version = "1.8.0", features = ["v4"] }
